fix tail overflow bug, close ant-design/ant-design#5083

--- a/assets/index.less
+++ b/assets/index.less
@@ -397,6 +397,7 @@
     padding: 0 0 0 50px;
     width: 100%;
     top: 1px;
+    box-sizing: content-box;
 
     & > i {
       height: 3px;
